stderr
JudgeMan.java:117: error: missing return statement
    }
    ^
1 error
